--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -299,8 +299,8 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>151</width>
-        <height>111</height>
+        <width>172</width>
+        <height>117</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="OrderedParamsLayout">
@@ -371,6 +371,19 @@
         <widget class="QLabel" name="orderedLevelLabel">
          <property name="text">
           <string>Level</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QCheckBox" name="orderedInverseMatrixFlag">
+         <property name="text">
+          <string>Inverse matrix</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <property name="autoRepeat">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
